<resources>
    <!-- app_info -->
    <string name="app_name">Walk-Tourist</string>
    <!-- // app_info -->

    <!-- menu_main -->
    <string name="action_settings">Settings</string>
    <!-- // menu_main -->

    <!-- top -->
    <string name="button_tourist_spot">観光地List</string>
    <string name="button_display_map">Map表示</string>
    <string name="button_start_game">ゲーム</string>
    <string name="button_help">Help</string>

    <string name="button_right">右</string>
    <string name="button_left">左</string>
    <string name="button_top">上</string>
    <string name="button_bottom">下</string>


    <!-- // top -->

    <!-- tourist_spot -->
    <string name="tourist_spot_back_button_home">HOME</string>
    <string name="tourist_spot_back_button_before">戻る</string>
    <string name="tourist_spot_list_title">観光地List</string>
    <!-- // tourist_spot -->

    <!-- game -->
    <string name="game_contents_back_button_home">HOME</string>
    <string name="game_contents_list_title">ゲームList</string>
    <!-- // game -->

    <!-- point_management -->
    <string name="point_management_back_button_home">HOME</string>
    <string name="point_management_title">ポイント管理</string>
    <string name="shop">アイテム購入</string>
    <string name="shop_back_button_home">HOME</string>
    <string name="hand_point">現在のポイント</string>
    <!-- // point_management -->

</resources>
